2009-12-20  Xan Lopez  <xlopez@igalia.com>

        Reviewed by Gustavo Noronha.

        [GTK] crash when loading new page
        https://bugs.webkit.org/show_bug.cgi?id=32752

        Wait until the document is attached to adjust our alignments,
        since we need to make sure the FrameView in the document content
        render object matches the newly created FrameView for the new
        page, otherwise we'll try to relayout the wrong view.

        * WebCoreSupport/FrameLoaderClientGtk.cpp:
        (WebKit::FrameLoaderClient::committedLoad):
        (WebKit::FrameLoaderClient::transitionToCommittedForNewPage):

2009-12-20  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

        Reviewed by Xan Lopez.

        Create a new WebKitDataSource object when attaching to a frame, if
        one does not exist. This may happen when we are fetching data from
        the page cache.

        * WebCoreSupport/DocumentLoaderGtk.cpp:
        (WebKit::DocumentLoader::attachToFrame):
        (WebKit::DocumentLoader::unrefDataSource):

2009-12-20  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

        Rubber-stamped by Xan Lopez.

        Make sure the text encoding machinery is initialized from the main
        frame, before opening the icon database.

        * webkit/webkitprivate.cpp:
        (webkit_init):

2009-12-19  Alejandro G. Castro  <alex@igalia.com>

        Reviewed by Xan Lopez.

        Fixed the problem when pasting in the same window with the
        middle-button, now we store a reference to the range instead of
        requesting it every time, and we do not release it until the
        clipboard is requested.
        https://bugs.webkit.org/show_bug.cgi?id=28153

        * WebKit/gtk/WebCoreSupport/EditorClientGtk.cpp:
        * WebKit/gtk/WebCoreSupport/EditorClientGtk.h:

2009-12-19  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

        Reviewed by Xan Lopez.
